@@ -303,7 +303,7 @@
     height: 20px;
     float: left;
     margin-right: 10px;
-    background-image: url('http://test-4097.lorepocorporate.appspot.com/media/icplayer/addons/resources/start.png');
+    background-image: url('resources/start.png');
     background-size: 20px;
     background-position: 6px center;
     background-repeat: no-repeat;
@@ -317,7 +317,7 @@
     height: 20px;
     float: left;
     margin-right: 10px;
-    background-image: url('http://test-4097.lorepocorporate.appspot.com/media/icplayer/addons/resources/stop.png');
+    background-image: url('resources/stop.png');
     background-size: 20px;
     background-position: center;
     background-repeat: no-repeat;
@@ -330,7 +330,7 @@
     width: 20px;
     height: 20px;
     float: left;
-    background-image: url('http://test-4097.lorepocorporate.appspot.com/media/icplayer/addons/resources/reset.png');
+    background-image: url('resources/reset.png');
     border-radius: 5px;
     background-size: 20px;
     background-position: center;
